--- a/index.html
+++ b/index.html
@@ -32,11 +32,9 @@
         class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-3 border-bottom"
       >
         <div
-          class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-3 col-md-3 mb-2 mb-md-0"
-        >
-         
+          class="d-flex flex-wrap align-items-center justify-content-center flex-column justify-content-md-between py-3 mb-3 col-md-3 mb-2 mb-md-0">
           <h2>Weather App</h2>
-          <div id="clock" class="ms-3 text-info"></div>
+          <div id="clock" class="mt-2 text-info"></div>
         </div>
 
         <ul
@@ -111,6 +109,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="./app.js" type="module"></script>
-    <script src="clock.js"></script>
+    
   </body>
 </html>
